--- a/order.html
+++ b/order.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" dir="ltr">
+<!DOCTYPE html>
+<html>
 
 <head>
-<title>PC Order</title>
-       <meta name="author" content="EDCC" />
-       <meta name="keywords" content="final project 'PC Superstore', based on wireframe" />
-       <meta name="description" content="This template is intended to be used as a base to build my PC Superstore web page." />
+<title>Travel Order</title>
+       <meta name="author" content="Jennifer Stratman" />
+       <meta name="keywords" content="final project 'Travel Store', based on wireframe" />
+       <meta name="description" content="This is a mock Travel Store for final project in CIS243." />
        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
        <meta name="robots" content="none" />
 	   <link rel="stylesheet" href="pcStyle.css" type="text/css" />
@@ -14,7 +14,15 @@
 	   <script type="text/javascript" src="cookies.js"></script>
 </head>
 <body>
-<table name="main" cellpadding="5" width="100%" border="0">
+<header>
+<img src="graphics/pc.jpeg" width="238" height="120" alt="" border="0" style="float: left; display: inline;">
+<h1>Jennifer Stratman's Travel Emporium</h1>
+<div class="address" style="display: inline; float: right;">20000 68th Ave. W<br />
+		     Lynnwood, WA 98036<br />
+		     425.222.1234</div>
+</header>
+
+	<table name="main" cellpadding="5" width="100%" border="0">
 	<tr>
 		<td width="100"></td>
 		<td></td>
@@ -23,7 +31,7 @@
 		<td width="1"></td>
 		<td></td>
 	</tr>
-	<tr>
+<!--	<tr>
 		<td colspan="2">
 			<img src="graphics/pc.jpeg" width="238" height="120" alt="" border="0">
 		</td>
@@ -40,6 +48,7 @@
 			<hr style="background-color:white" />
 		</td>
 	</tr>
+-->
 	<tr>
 		<td rowspan="3" valign="top" nowrap="nowrap" class="orderSum">
 			<a href="home.html" class="orderSum">Home</a><br />
