--- a/summary.html
+++ b/summary.html
@@ -7,9 +7,9 @@
        <meta name="description" content="This is a summary of the vacation package ordered through the travel emporium." />
        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
        <meta name="robots" content="none" />
-	   <link rel="stylesheet" href="travelStyle.css" type="text/css" />
-	   <script type="text/javascript" src="test.js"></script>
-	   <script type="text/javascript" src="cookies.js"></script>
+	   <link rel="stylesheet" href="css/travelStyle.css" type="text/css" />
+	   <script type="text/javascript" src="js/test.js"></script>
+	   <script type="text/javascript" src="js/cookies.js"></script>
 <script type="text/javascript">
 <!--
 //<![CDATA[
@@ -35,7 +35,7 @@
 
   <div class="wrapper">
     <nav class="linkhead" id="navLink">
-      <a href="index.html" class="orderSum">Home</a><br />
+      <a href="home.html" class="orderSum">Home</a><br />
       <a href="contact.html" class="orderSum">Contact Us</a><br />
       <a href="order.html" class="orderSum">Order Now</a>
       <a href="javascript:void(0);" class="icon" onclick="navFunction()">&#9776;</a>
@@ -54,8 +54,8 @@
 
       document.write(GetCookie("custName") + "<br />");
       document.write(GetCookie("custEmail") + "<br />");
-/*      document.write(GetCookie("custAddress") + "<br />");
-      document.write(GetCookie("custCity") + "<br />"); */
+      document.write(GetCookie("custAddress") + "<br />");
+      document.write(GetCookie("custCity") + "<br />");
 
       //]]>
       //-->
