--- a/home.html
+++ b/home.html
@@ -8,10 +8,10 @@
     <meta name="description" content="This page provides an introduction to the Travel Emporium web site." />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="robots" content="none" />
-    <link rel="stylesheet" href="travelStyle.css" type="text/css" />
+    <link rel="stylesheet" href="css/travelStyle.css" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="imageGallery.js"></script>
-    <script type="text/javascript" src="test.js"></script>
+    <script type="text/javascript" src="js/imageGallery.js"></script>
+    <script type="text/javascript" src="js/test.js"></script>
 
 </head>
 <body>
@@ -26,7 +26,7 @@
 
     <div class="wrapper">
         <nav class="linkhead" id="navLink">
-            <a href="index.html" class="orderSum">Home</a><br />
+            <a href="home.html" class="orderSum">Home</a><br />
             <a href="contact.html" class="orderSum">Contact Us</a><br />
             <a href="order.html" class="orderSum">Order Now</a>
             <a href="javascript:void(0);" class="icon" onclick="navFunction()">&#9776;</a>
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="previous">&#8810;</div>
             <div class="gallery">
-                <img border=2 style="border-color: gray" class="images" src="graphics/maui.jpeg">
+                <img border=2 style="border-color: gray" class="images" src="../graphics/maui.jpeg">
             </div>
             <div class="next">&#8811;</div>
         </div>
@@ -51,7 +51,7 @@
 
 -->
             <h2>Welcome to the Travel Emporium</h2>
-            <p>Are you aching to get away? We can help.</p>
+            <p>Are you aching to get away? We can help. Go to our order page to start your journey.</p>
 </main>
 
 </body>
