--- a/order.html
+++ b/order.html
@@ -7,10 +7,10 @@
        <meta name="description" content="This is a mock Travel Store for final project in CIS243." />
        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
        <meta name="robots" content="none" />
-	   <link rel="stylesheet" href="travelStyle.css" type="text/css" />
-		<script type="text/javascript" src="test.js"></script>
+	   <link rel="stylesheet" href="css/travelStyle.css" type="text/css" />
+		<script type="text/javascript" src="js/test.js"></script>
 <!--	   <script src="library.js" type="text/javascript"></script> -->
-	   <script type="text/javascript" src="cookies.js"></script>
+	   <script type="text/javascript" src="js/cookies.js"></script>
 	   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
@@ -25,7 +25,7 @@
 
   <div class="wrapper">
     <nav class="linkhead" id="navLink">
-      <a href="index.html" class="orderSum">Home</a><br />
+      <a href="home.html" class="orderSum">Home</a><br />
       <a href="contact.html" class="orderSum">Contact Us</a><br />
       <a href="order.html" class="orderSum">Order Now</a>
       <a href="javascript:void(0);" class="icon" onclick="navFunction()">&#9776;</a>
@@ -48,10 +48,13 @@
       </div>
 
       <!-- This section was added (not in the template) so will need to update at least test.js, if not other files -->
-      	    <label>How many are in your party?</label>
-            <div class="info_block">
       <!-- Need to change figure out how to call the selected value and pull the information into the summary
        both here and in test.js -->
+	   <!-- Issue with select tags, so removing for assignment. Will add in once I figure this out -->
+<!--	   
+	  <label>How many are in your party?</label>
+            <div class="info_block">
+
             <select id="numberPeople" name="partySize" onchange="numPeople(this.form);">
               <option value="1">Flying solo</option>
               <option value="2">Two to tango</option>
@@ -64,7 +67,7 @@
       	      <option value="9">Nine is fine</option>
             </select>
             </div>
-
+-->
 <div class="selections">
 	<div class="buildLabel">
       <label>Build your own adventures</label>
@@ -108,14 +111,15 @@
     </form>
   </article>
   <aside>
-    <div class="orderSum" id="orderSum" style="height: 250px;">Order Summary: <br />3 days / 2 nights <br /></div>
+    <div class="orderSum" id="orderSum" style="height: 250px;">Order Summary: <br />3 days / 2 nights in Maui<br /></div>
       <br /><br /><br />
       <div id="priceSum">
-	<p>Subtotal: $1999.95</p>
-	<p style="border-bottom-color: White; border-bottom-width: 1px; border-bottom-style: solid;">Tax: .78</p>
-	<p>Total: $1999.99</p>
+	<p>Subtotal: $999.95</p>
+	<p style="border-bottom-color: White; border-bottom-width: 1px; border-bottom-style: solid;">Tax: 95.00</p>
+	<p>Total: $1094.95</p>
       </div>
   </aside>
+
 </div>
 
 <script type="text/javascript">
